# Define an alias for pkglibdir to override Automake helpfulness:
#
#   error: 'pkglibdir' is not a legitimate directory for 'DATA'
#
# See: https://www.gnu.org/software/automake/manual/html_node/Uniform.html
mylibdir = $(pkglibdir)

dist_mylib_DATA = base.sh \
                  build.py \
                  charliecloud.py \
                  fakeroot.py \
                  misc.py \
                  pull.py \
                  push.py \
                  python_modules/lark-stubs/lexer.pyi \
                  python_modules/lark-stubs/tree.pyi \
                  python_modules/lark-stubs/__init__.pyi \
                  python_modules/lark-stubs/reconstruct.pyi \
                  python_modules/lark-stubs/exceptions.pyi \
                  python_modules/lark-stubs/lark.pyi \
                  python_modules/lark-stubs/load_grammar.pyi \
                  python_modules/lark-stubs/grammar.pyi \
                  python_modules/lark-stubs/visitors.pyi \
                  python_modules/lark-stubs/indenter.pyi \
                  python_modules/lark_parser-0.11.2.dist-info \
                  python_modules/lark_parser-0.11.2.dist-info/LICENSE \
                  python_modules/lark_parser-0.11.2.dist-info/WHEEL \
                  python_modules/lark_parser-0.11.2.dist-info/RECORD \
                  python_modules/lark_parser-0.11.2.dist-info/entry_points.txt \
                  python_modules/lark_parser-0.11.2.dist-info/top_level.txt \
                  python_modules/lark_parser-0.11.2.dist-info/METADATA \
                  python_modules/lark_parser-0.11.2.dist-info/INSTALLER \
                  python_modules/lark/exceptions.py \
                  python_modules/lark/__pycache__/common.cpython-38.pyc \
                  python_modules/lark/__pycache__/reconstruct.cpython-38.pyc \
                  python_modules/lark/__pycache__/reconstruct2.cpython-38.pyc \
                  python_modules/lark/__pycache__/tree.cpython-38.pyc \
                  python_modules/lark/__pycache__/lark.cpython-38.pyc \
                  python_modules/lark/__pycache__/__init__.cpython-38.pyc \
                  python_modules/lark/__pycache__/tree_matcher.cpython-38.pyc \
                  python_modules/lark/__pycache__/utils.cpython-38.pyc \
                  python_modules/lark/__pycache__/load_grammar.cpython-38.pyc \
                  python_modules/lark/__pycache__/indenter.cpython-38.pyc \
                  python_modules/lark/__pycache__/lexer.cpython-38.pyc \
                  python_modules/lark/__pycache__/parser_frontends.cpython-38.pyc \
                  python_modules/lark/__pycache__/parse_tree_builder.cpython-38.pyc \
                  python_modules/lark/__pycache__/exceptions.cpython-38.pyc \
                  python_modules/lark/__pycache__/visitors.cpython-38.pyc \
                  python_modules/lark/__pycache__/grammar.cpython-38.pyc \
                  python_modules/lark/common.py \
                  python_modules/lark/load_grammar.py \
                  python_modules/lark/tools/__pycache__ \
                  python_modules/lark/tools/__pycache__/standalone.cpython-38.pyc \
                  python_modules/lark/tools/__pycache__/__init__.cpython-38.pyc \
                  python_modules/lark/tools/__pycache__/nearley.cpython-38.pyc \
                  python_modules/lark/tools/__pycache__/serialize.cpython-38.pyc \
                  python_modules/lark/tools/serialize.py \
                  python_modules/lark/tools/__init__.py \
                  python_modules/lark/tools/nearley.py \
                  python_modules/lark/tools/standalone.py \
                  python_modules/lark/__init__.py \
                  python_modules/lark/tree_matcher.py \
                  python_modules/lark/lark.py \
                  python_modules/lark/reconstruct2.py \
                  python_modules/lark/tree.py \
                  python_modules/lark/utils.py \
                  python_modules/lark/parser_frontends.py \
                  python_modules/lark/visitors.py \
                  python_modules/lark/reconstruct.py \
                  python_modules/lark/grammar.py \
                  python_modules/lark/grammars \
                  python_modules/lark/grammars/common.lark \
                  python_modules/lark/grammars/python.lark \
                  python_modules/lark/grammars/lark.lark \
                  python_modules/lark/grammars/unicode.lark \
                  python_modules/lark/lexer.py \
                  python_modules/lark/parse_tree_builder.py \
                  python_modules/lark/__pyinstaller/__pycache__/__init__.cpython-38.pyc \
                  python_modules/lark/__pyinstaller/__pycache__/hook-lark.cpython-38.pyc \
                  python_modules/lark/__pyinstaller/__init__.py \
                  python_modules/lark/__pyinstaller/hook-lark.py \
                  python_modules/lark/parsers/__pycache__/xearley.cpython-38.pyc \
                  python_modules/lark/parsers/__pycache__/earley.cpython-38.pyc \
                  python_modules/lark/parsers/__pycache__/earley_common.cpython-38.pyc \
                  python_modules/lark/parsers/__pycache__/lalr_puppet.cpython-38.pyc \
                  python_modules/lark/parsers/__pycache__/grammar_analysis.cpython-38.pyc \
                  python_modules/lark/parsers/__pycache__/__init__.cpython-38.pyc \
                  python_modules/lark/parsers/__pycache__/lalr_parser.cpython-38.pyc \
                  python_modules/lark/parsers/__pycache__/lalr_analysis.cpython-38.pyc \
                  python_modules/lark/parsers/__pycache__/cyk.cpython-38.pyc \
                  python_modules/lark/parsers/__pycache__/earley_forest.cpython-38.pyc \
                  python_modules/lark/parsers/earley_common.py \
                  python_modules/lark/parsers/earley_forest.py \
                  python_modules/lark/parsers/cyk.py \
                  python_modules/lark/parsers/__init__.py \
                  python_modules/lark/parsers/xearley.py \
                  python_modules/lark/parsers/grammar_analysis.py \
                  python_modules/lark/parsers/lalr_analysis.py \
                  python_modules/lark/parsers/lalr_puppet.py \
                  python_modules/lark/parsers/earley.py \
                  python_modules/lark/parsers/lalr_parser.py \
                  python_modules/lark/indenter.py
noinst_DATA = charliecloud
mylib_DATA = contributors.bash \
             version.py \
             version.sh \
             version.txt

CLEANFILES = $(mylib_DATA) $(noinst_DATA)

# This symlink is so scripts can use "lib/charliecloud" whether they are
# installed or not.
charliecloud:
	ln -s . charliecloud

contributors.bash: ../README.rst
	rm -f $@
	printf '# shellcheck shell=bash\n' >> $@
	printf 'declare -a ch_contributors\n' >> $@
	sed -En 's/^\*.+<(.+@.+)>.*$$/ch_contributors+=('"'"'\1'"'"')/p' < $< >> $@

version.txt: ../configure
	printf '@PACKAGE_VERSION@\n' > $@

version.py: ../configure
	printf "VERSION='@PACKAGE_VERSION@'\n" > $@

version.sh: ../configure
	printf "# shellcheck shell=sh disable=SC2034\n" > $@
	printf "ch_version='@PACKAGE_VERSION@'\n" >> $@
