EXTRA_DIST = \
debian/README \
debian/changelog \
debian/charliecloud.examples \
debian/charliecloud.install \
debian/compat \
debian/control \
debian/copyright \
debian/docs \
debian/format \
debian/rules \
debian/travis.sh \
debian/watch \
fedora/build \
fedora/charliecloud.rpmlintrc \
fedora/charliecloud.spec \
opensuse/README \
vagrant/Vagrantfile
